# MalLLM

./: .gitignore  README.md  linkjoin.txt  main.py  pyproject.toml  requirements.txt
config/: deepseek-coder-6.7b.json  qwen-coder-0.5b.json  qwen3-coder-30B-A3B-instruct.json
data/: loader.py  models.py
mal-llm/: generate.py  main.py
malllm/: eval.py  generate.py  main.py
tests/: test_data_loader.py  (+3 more)
tests-data/: 1ru-cache-6.0.0_1764120113352.txt  2024-05-05-avx-web-build-v1000.0.1_1764120142207.txt  2024-05-29-hello-1st-anni-v4.4.25_1764120145193.txt  2024-05-30-flexfone-reseller-v100.0.3_1764120147502.txt  2024-05-30-flexfone-reseller-v100.0.3_1764120147506.txt  2024-05-30-flexfone-reseller-v100.0.3_1764120147510.txt  2024-05-30-flexfone-reseller-v100.0.3_1764120147516.txt  2024-05-30-flexfone-reseller-v100.0.5_1764120152229.txt  2024-05-30-hello-1st-anni-v4.4.31_1764120157552.txt  2024-06-20-tyk-developer-portal-v1.0.0_1764120186777.txt  2024-06-20-tyk-developer-portal-v1.0.0_1764120186780.txt  2024-07-11-llm-oracle-v1.0.0_1764120227493.txt  2024-07-12-discord-api-ts-v4.6.7_1764120313560.txt  2024-07-12-discord-api-ts-v4.6.7_1764120313562.txt  2024-07-12-discord-api-ts-v4.6.7_1764120313564.txt  2024-07-13-img-aws-s3-object-multipart-copy-v0.3.3_1764120318715.txt  2024-07-14-redmond-v99.9.10_1764120323946.txt  2024-07-14-redmond-v99.9.10_1764120323948.txt  2024-07-18-harthat-cookie-v2.5.9_1764120327947.txt  2024-09-03-videoads-util-capability-detection-v1.0.3_1764120406644.txt  2024-09-03-videoads-util-capability-detection-v1.0.3_1764120406648.txt  (+246 more)
(+13969 files in other folders)
